Grease Pencil: Point selection doesn't work correctly with modifiers #89306

Closed
opened 2021-06-20 13:10:28 +02:00 by Keen Foong · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-19 09:41, hash: 3da25dc625
Also tested on 2.93
Worked: 2.92.0

Short description of error
It appears that the point selection doesn't quite work with modifiers like subdivision. Trying to select based on the viewport view doesn't work. However it works if you select based on the edit view.
GP_SelectionWrongLocation.gif

Exact steps for others to reproduce the error
GP_SelectionWrongLocation.blend

  • Attempt to select the left most vertex based on what you see.
  • Doesn't select as it thinks the vertex is in the far left.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.77 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-19 09:41, hash: `3da25dc625` Also tested on 2.93 Worked: 2.92.0 **Short description of error** It appears that the point selection doesn't quite work with modifiers like subdivision. Trying to select based on the viewport view doesn't work. However it works if you select based on the edit view. ![GP_SelectionWrongLocation.gif](https://archive.blender.org/developer/F10183221/GP_SelectionWrongLocation.gif) **Exact steps for others to reproduce the error** [GP_SelectionWrongLocation.blend](https://archive.blender.org/developer/F10183223/GP_SelectionWrongLocation.blend) - Attempt to select the left most vertex based on what you see. - Doesn't select as it thinks the vertex is in the far left.
Author

Added subscriber: @kfoong

Added subscriber: @kfoong
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @antoniov

Added subscriber: @antoniov

This was caused by Bezier selection changes.

This was caused by Bezier selection changes.
Antonio Vazquez self-assigned this 2021-06-21 09:40:14 +02:00

This issue was referenced by 2cbfa786f3

This issue was referenced by 2cbfa786f305fcc9d9c1463421a40fec8f5d5fff

This issue was referenced by ce64cfd6ed

This issue was referenced by ce64cfd6edc2a0ec0aabfd4daaa5f655763cc74b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thanks @antoniov !

Thanks @antoniov !
Author

Just tested this, you don't know how long this has been bugging me. Thanks so much!

Just tested this, you don't know how long this has been bugging me. Thanks so much!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89306
No description provided.