Fix T89306: GPencil selection doesn't work correctly with modifiers

The problem was introduced with Bezier modification because the selection code was using the original stroke and not the evaluated version.